Limit number of genres fetched to just the top 5
